--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -4,15 +4,23 @@
 }
 html, body {
     height: 100%;
+    background: #e9ecef;
   }
-  
-  .footer {
-    position: absolute;
+  .jumbotron {
+
+  }
+  .page-content {
+    flex: 1 0 auto;
+  }
+  footer {
+    position: relative;
+    flex-shrink: none;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: auto;
     line-height: 60px;
-  }
+    background-color: #f5f5f5;
+}
   .movie-list-selected{
     background-color:#e6e6e6;
   }
